--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chatjquery",
   "version": "1.0.0",
-  "description": "",
+  "description": "Chat usando jquery junto con socket io",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -9,9 +9,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "polkadeveloper",
   "license": "ISC",
   "dependencies": {
-    "socket.io": "^4.7.4"
+    "socket.io": "4.7.4",
+    "tailwindcss": "3.4.1"
   }
 }
